<resources>
    <string name="app_name">Countries Info</string>
    <string name="img_of_flag">img_of_flag</string>
    <string name="search_country_by_name">Search Country by Name</string>
    <string name="sort_by_name_a_z">Sort by name (A - Z)</string>
    <string name="sort_by_name_z_a">Sort by name (Z - A)</string>
    <string name="sort_by_population_low_to_high">Sort by population (low to high)</string>
    <string name="sort_by_population_high_to_low">Sort by population (high to low)</string>
    <string name="sort_by_surface_low_to_high">Sort by surface (low to high)</string>
    <string name="sort_by_surface_high_to_low">Sort by surface (high to low)</string>
    <string name="img_of_coat_of_arms">img_of_coat_of_arms</string>
    <string name="img_map">img_map</string>
    <string name="click_on_this_link_to_open_the_desired_country_on_google_map"><u>Click on this link to open the desired country on Google Map</u></string>
    <string name="neighboring_countries">Neighboring countries</string>
    <string name="you_don_t_have_internet_connection">You don`t have internet connection. Try again.</string>
    <string name="retry">Retry</string>
    <string name="sort_by_title">Sort by</string>
    <string name="type_here_to_find_country_title">Type here to find country</string>
    <string name="img_country">Image of Country</string>
</resources>