<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_of_flag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_of_flag"
            app:layout_constraintEnd_toStartOf="@+id/img_of_coat_of_arms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/img_of_coat_of_arms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_of_coat_of_arms"
            app:layout_constraintBottom_toBottomOf="@+id/img_of_flag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_of_flag"
            app:layout_constraintTop_toTopOf="@+id/img_of_flag"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_country_name_common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/img_of_flag"
            app:layout_constraintTop_toBottomOf="@+id/img_of_flag"
            tools:text="Country name (common)" />

        <TextView
            android:id="@+id/tv_official_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_country_name_common"
            app:layout_constraintStart_toStartOf="@+id/tv_country_name_common"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name_common"
            tools:text="Official name" />

        <View
            android:id="@+id/divider"
            style="@style/Divider"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_official_name" />

        <TextView
            android:id="@+id/tv_capital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_official_name"
            app:layout_constraintStart_toStartOf="@+id/tv_official_name"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Capital" />

        <TextView
            android:id="@+id/tv_population_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_capital"
            app:layout_constraintStart_toStartOf="@+id/tv_capital"
            app:layout_constraintTop_toBottomOf="@+id/tv_capital"
            tools:text="Population" />

        <TextView
            android:id="@+id/tv_surface_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_population_name"
            app:layout_constraintStart_toStartOf="@+id/tv_population_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_population_name"
            tools:text="Surface" />

        <TextView
            android:id="@+id/tv_language_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_surface_name"
            app:layout_constraintStart_toStartOf="@+id/tv_surface_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_surface_name"
            tools:text="Language" />

        <View
            android:id="@+id/divider_2"
            style="@style/Divider"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_language_name" />

        <TextView
            android:id="@+id/tv_timezone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_language_name"
            app:layout_constraintStart_toStartOf="@+id/tv_language_name"
            app:layout_constraintTop_toBottomOf="@+id/divider_2"
            tools:text="TimeZone" />

        <ImageView
            android:id="@+id/img_map"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_map"
            android:src="@drawable/map"
            app:layout_constraintStart_toStartOf="@+id/tv_timezone"
            app:layout_constraintTop_toBottomOf="@+id/tv_timezone" />

        <TextView
            android:id="@+id/tv_google_map_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/click_on_this_link_to_open_the_desired_country_on_google_map"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_map"
            app:layout_constraintEnd_toEndOf="@+id/tv_timezone"
            app:layout_constraintStart_toEndOf="@+id/img_map"
            app:layout_constraintTop_toTopOf="@+id/img_map" />

        <View
            android:id="@+id/divider_3"
            style="@style/Divider"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_map" />

        <TextView
            android:id="@+id/tv_neighboring_countries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/neighboring_countries"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_google_map_link"
            app:layout_constraintStart_toStartOf="@+id/img_map"
            app:layout_constraintTop_toBottomOf="@+id/divider_3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_codes_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_neighboring_countries" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>